--- a/css/index.css
+++ b/css/index.css
@@ -32,7 +32,7 @@ body {
 }
 
 .main {
-    max-width: 320px;
+    max-width: 280px;
     margin: 0 auto;
     padding: 5rem 4rem;
     background-color: var(--main-color);
@@ -41,7 +41,9 @@ body {
 }
 
 .mainLogo {
-    max-width: 90%;
+    width: 426px;
+    height: auto;
+    max-width: 70%;
     display: block;
     box-sizing: border-box;
     margin: 0 auto 4rem;
@@ -80,12 +82,6 @@ body {
     line-height: 5rem;
 }
 
-@media screen and (max-width: 1200px) {}
-
-@media screen and (max-width: 960px) {}
-
-@media screen and (max-width: 640px) {}
-
 @media screen and (max-width: 480px) {
     html {
         font-size: 8px;
@@ -97,5 +93,3 @@ body {
         max-width: 80%;
     }
 }
-
-@media screen and (max-width: 360px) {}
