--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@
     --font-color-black: #000000;
     --main-color: #ffffff;
     --button-color: #00BEFA;
+    --button-color-lite: #5dd9ff;
 }
 
 html {
@@ -48,6 +49,8 @@ body {
     box-sizing: border-box;
     margin: 0 auto 4rem;
     border-radius: 0.5rem;
+    box-shadow: 0px 0px 10px 2px #0000004d;
+    border: 1px solid #00000080;
 }
 
 .mainTitle {
@@ -65,7 +68,7 @@ body {
 
 .installButton_topText,
 .installButton_bottomText {
-    font-size: 1rem;
+    font-size: 0.8rem;
 }
 
 .installButton {
@@ -74,12 +77,14 @@ body {
     display: block;
     margin: 1rem auto;
     background-color: var(--button-color);
+    background: linear-gradient( 180deg, var(--button-color-lite) 0%, var(--button-color) 30%, var(--button-color) 70%, var(--button-color-lite) 100%);
     color: var(--font-color-white);
     border-radius: 5px;
     cursor: pointer;
     font-size: 1.6rem;
     text-decoration: none;
     line-height: 5rem;
+    box-shadow: 0px 1px 3px 3px #0000004d;
 }
 
 @media screen and (max-width: 480px) {
