--- a/css/index.css
+++ b/css/index.css
@@ -42,7 +42,8 @@ body {
 }
 
 .mainLogo {
-    width: 426px;
+    max-width: 426px;
+    min-height: 105px;
     height: auto;
     max-width: 70%;
     display: block;
@@ -81,7 +82,7 @@ body {
     color: var(--font-color-white);
     border-radius: 5px;
     cursor: pointer;
-    font-size: 1.6rem;
+    font-size: 2.2rem;
     text-decoration: none;
     line-height: 5rem;
     box-shadow: 0px 1px 3px 3px #0000004d;
